Moved to devspark repositories and minor update in enumerations support

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.jstorni</groupId>
+	<groupId>org.devspark</groupId>
 	<artifactId>lorm</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Lightweight ORM</name>
@@ -58,12 +58,12 @@
 		<repository>
 			<id>aws-release</id>
 			<name>AWS Release Repository</name>
-			<url>s3://jstorni-maven-repository/release</url>
+			<url>s3://maven-release-repositories/release</url>
 		</repository>
 		<snapshotRepository>
 			<id>aws-snapshot</id>
 			<name>AWS Snapshot Repository</name>
-			<url>s3://jstorni-maven-repository/snapshot</url>
+			<url>s3://maven-snapshot-repositories/snapshot</url>
 		</snapshotRepository>
 	</distributionManagement>
 
